data/all_generated_tests/raw_wast_tests/block_InfiniteLoops_2132.wast
;; 3. **Test Description**: Implement a `block` with a `loop` containing a `br_table` instruction with incorrect branching table entries.    - **Constraint**: Verifies correct handling of `br_table` entries and avoidance of inadvertent infinite loops due to branching errors.

(assert_invalid
  (module (func $type-loop-br_table
    (block
      (loop
        (br_table 0 0 (i32.const 0))
        (i32.const 1)
      )
    )
  ))
  "type mismatch"
)